tests/negative/optimizer/div-zero-int.orng
fn main() -> Int
    1 / 0